# fraud-api-task

./: Dockerfile  README.md  fraud_model.pkl  main.py  pyproject.toml
.github/workflows/: ci.yml
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfstate  variables.tf
terraform/modules/dynamodb_table/: main.tf  variables.tf
terraform/modules/flink_app/: main.tf  outputs.tf  variables.tf
terraform/modules/kinesis_stream_ref/: main.tf  outputs.tf  variables.tf
terraform/modules/sagemaker_rt_endpoint/: main.tf  outputs.tf  variables.tf
tests/: test_main.py
