[project]
name = "fraud-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["."]
